Add custom toolbar for edit task TaskFrament:Add fragment arguments for toolbar boolean,add toolbar setup method for both types of toolbars TaskListFragment:Launch new task fragment with correct toolbar,set by toolbar boolean TaskPagerActivity:Add extra for toolbar boolean Resources: Add layouts for edit toolbar

--- a/app/src/main/res/layout/fragment_task.xml
+++ b/app/src/main/res/layout/fragment_task.xml
@@ -25,7 +25,20 @@
                 android:textColor="@android:color/black"
                 android:textSize="24sp"
                 android:gravity="center"/>
+        </android.support.v7.widget.Toolbar>
 
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/edit_task_app_bar"
+            android:layout_width="match_parent"
+            android:background="@android:color/transparent"
+            android:layout_height="?attr/actionBarSize">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:text="@string/edit_task_toolbar_title"
+            android:textColor="@android:color/black"
+            android:textSize="24sp"
+            android:gravity="center"/>
         </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
