--- a/app/src/main/res/layout/fragment_task.xml
+++ b/app/src/main/res/layout/fragment_task.xml
@@ -30,6 +30,7 @@
         <android.support.v7.widget.Toolbar
             android:id="@+id/edit_task_app_bar"
             android:layout_width="match_parent"
+            app:navigationIcon="@drawable/ic_up"
             android:background="@android:color/transparent"
             android:layout_height="?attr/actionBarSize">
         <TextView
