--- a/app/src/main/res/layout/list_item_task.xml
+++ b/app/src/main/res/layout/list_item_task.xml
@@ -23,9 +23,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="2dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginBottom="8dp"
         android:text="Due Date"
         android:textColor="@android:color/holo_red_dark"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/task_title" />
 
