--- a/app/src/main/res/layout/fragment_task.xml
+++ b/app/src/main/res/layout/fragment_task.xml
@@ -60,6 +60,7 @@
             android:id="@+id/task_title"
             android:layout_width="match_parent"
             android:layout_height="50dp"
+            android:inputType="text"
             android:hint="Title" />
 
     </android.support.design.widget.TextInputLayout>
