--- a/app/src/main/res/layout/fragment_task.xml
+++ b/app/src/main/res/layout/fragment_task.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@android:color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -10,7 +9,6 @@
         android:layout_width="match_parent"
         app:elevation="0dp"
         android:layout_height="wrap_content"
-        android:background="@android:color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -23,7 +21,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:text="@string/new_task_toolbar_title"
-                android:textColor="@android:color/black"
                 android:textSize="24sp"
                 android:gravity="center"/>
         </androidx.appcompat.widget.Toolbar>
@@ -37,7 +34,6 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:text="@string/edit_task_toolbar_title"
-            android:textColor="@android:color/black"
             android:textSize="24sp"
             android:gravity="center"/>
         </androidx.appcompat.widget.Toolbar>
@@ -56,7 +52,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/new_app_bar">
 
-        <EditText
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/task_title"
             android:layout_width="match_parent"
             android:layout_height="50dp"
@@ -77,7 +73,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_input_title">
 
-        <EditText
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/task_details"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -133,7 +129,6 @@
         android:elevation="8dp"
         android:text="due date"
         android:gravity="center"
-        android:textColor="@android:color/black"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.405"
@@ -151,7 +146,6 @@
         android:elevation="8dp"
         android:gravity="center"
         android:text="due time"
-        android:textColor="@android:color/black"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/cardView"
         app:layout_constraintEnd_toEndOf="parent"
@@ -168,7 +162,6 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:text="@string/save_button_label"
-        android:textColor="@android:color/white"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
