--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -1,4 +1,5 @@
-<resources>
+<?xml version="1.0" encoding="utf-8"?>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
@@ -6,15 +7,15 @@
         <item name="colorPrimary">@android:color/holo_red_dark</item>
         <item name="colorPrimaryDark">@android:color/holo_red_dark</item>
         <item name="colorAccent">@android:color/holo_red_dark</item>
-        <item name="android:navigationBarColor">@android:color/white</item>
-        <item name="android:statusBarColor">@android:color/white</item>
-        <item name="android:windowLightNavigationBar">true</item>
-        <item name="android:windowLightStatusBar">true</item>
+        <item tools:targetApi="21" name="android:navigationBarColor">@color/matteDark</item>
+        <item tools:targetApi="21" name="android:statusBarColor">@color/matteDark</item>
+        <item tools:targetApi="27" name="android:windowLightNavigationBar">false</item>
+        <item tools:targetApi="23" name="android:windowLightStatusBar">false</item>
     </style>
 
     <style name="toolbar.theme" parent="Widget.AppCompat.Toolbar">
-        <item name="android:background">@android:color/white</item>
         <item name="android:theme">@style/AppTheme</item>
+        <item name="android:background">@color/matteDark</item>
     </style>
 
 </resources>
