--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,7 +8,7 @@
         <item name="colorAccent">@android:color/holo_red_dark</item>
     </style>
 
-    <style name="toolbar.theme" parent="Widget.AppCompat.Toolbar">
+    <style name="toolbar.theme" parent="Widget.MaterialComponents.Toolbar">
         <item name="android:background">@android:color/white</item>
         <item name="android:theme">@style/AppTheme</item>
     </style>
