Bulk commit of backup and restore support and dialog customization BackupRestoreFragment: Create a dialog fragment for backup and restore DatePickerFragment: change dialog style to custom one and remove title TimePickerFragment: change dialog style to custom and remove title TaskDatabase: Add public string for database name TaskFragment: Change date and time textviews to buttons TaskListFragment: Add backup and restore to toolbar and launch fragment when pressed Resources: add backup and restore layout, add custom theme for dialogs, round corners, change textviews to buttons AndroidManifest: add permissions for read and write external storage for backup and restore

--- a/app/src/main/res/layout/fragment_task_list.xml
+++ b/app/src/main/res/layout/fragment_task_list.xml
@@ -18,13 +18,13 @@
             android:id="@+id/app_bar"
             style="@style/toolbar.theme"
             android:layout_width="match_parent"
+            app:navigationIcon="@drawable/ic_backup_restore"
             android:layout_height="?attr/actionBarSize">
             <TextView
+                style="@style/textview.title.theme"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:text="@string/app_name"
-                android:textSize="24sp"
-                android:gravity="center"/>
+                android:text="@string/task_list_title"/>
 
         </androidx.appcompat.widget.Toolbar>
 
