--- a/app/src/main/res/layout/fragment_task.xml
+++ b/app/src/main/res/layout/fragment_task.xml
@@ -20,11 +20,10 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize">
             <TextView
+                style="@style/textview.title.theme"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:text="@string/new_task_toolbar_title"
-                android:textSize="24sp"
-                android:gravity="center"/>
+                android:text="@string/new_task_toolbar_title"/>
         </androidx.appcompat.widget.Toolbar>
 
         <androidx.appcompat.widget.Toolbar
@@ -34,11 +33,10 @@
             app:navigationIcon="@drawable/ic_up"
             android:layout_height="?attr/actionBarSize">
         <TextView
+            style="@style/textview.title.theme"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:text="@string/edit_task_toolbar_title"
-            android:textSize="24sp"
-            android:gravity="center"/>
+            android:text="@string/edit_task_toolbar_title" />
         </androidx.appcompat.widget.Toolbar>
 
     </com.google.android.material.appbar.AppBarLayout>
@@ -92,7 +90,8 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="76dp"
         android:layout_marginEnd="8dp"
-        app:cardElevation="4dp"
+        app:cardElevation="8dp"
+        app:cardCornerRadius="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -108,7 +107,6 @@
                 android:layout_height="41dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:elevation="8dp"
                 android:src="@drawable/ic_due_date"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -120,46 +118,37 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="8dp"
-                android:elevation="8dp"
                 android:src="@drawable/ic_due_time"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
-            <TextView
-                android:id="@+id/date_text_view"
+            <Button
+                android:id="@+id/date_button"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
-                android:elevation="8dp"
-                android:gravity="center"
-                android:text="due date"
-                android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.408"
                 app:layout_constraintStart_toEndOf="@+id/imageView2"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:id="@+id/due_time_text_view"
+            <Button
+                android:id="@+id/time_button"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="44dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
-                android:elevation="8dp"
-                android:gravity="center"
-                android:text="due time"
-                android:textSize="18sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.408"
                 app:layout_constraintStart_toEndOf="@+id/imageView3"
-                app:layout_constraintTop_toBottomOf="@+id/date_text_view"
-                app:layout_constraintVertical_bias="0.0" />
+                app:layout_constraintTop_toBottomOf="@+id/date_button"
+                app:layout_constraintVertical_bias="0.863" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
