--- a/app/src/main/res/layout/list_item_task.xml
+++ b/app/src/main/res/layout/list_item_task.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/list_item_task"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -21,14 +22,14 @@
 
     <TextView
         android:id="@+id/task_date"
-        android:layout_width="78dp"
+        android:layout_width="98dp"
         android:layout_height="37dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:text="Due Date"
-        android:textColor="@android:color/holo_red_dark"
         android:textAlignment="center"
+        android:textColor="@android:color/holo_red_dark"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
