--- a/app/src/main/res/layout/activity_task_list.xml
+++ b/app/src/main/res/layout/activity_task_list.xml
@@ -4,5 +4,5 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/fragment_container"
-    tools:context=".TaskListActivity">
+    tools:context=".Controller.TaskListActivity">
 </androidx.constraintlayout.widget.ConstraintLayout>
