--- a/app/src/main/res/layout/list_item_task.xml
+++ b/app/src/main/res/layout/list_item_task.xml
@@ -8,7 +8,7 @@
 
     <TextView
         android:id="@+id/task_title"
-        android:layout_width="115dp"
+        android:layout_width="wrap_content"
         android:layout_height="29dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
